Fix gradle build problem

--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>IRAN TVs</title>
     <meta charset="UTF-8">
     <link href="https://vjs.zencdn.net/7.4.1/video-js.css" rel="stylesheet">
 </head>
