--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -8,16 +8,18 @@
 <body>
 <video id="my-video" class="video-js" controls preload="auto" fluid="true"></video>
 <script src="https://vjs.zencdn.net/7.4.1/video.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.15.0/videojs-contrib-hls.min.js"></script>
+<script src="https://unpkg.com/videojs-contrib-hls/dist/videojs-contrib-hls.js"></script>
 <script th:inline="javascript">
 /*<![CDATA[*/
 
+
     var player = videojs("my-video");
-    player.play();
     player.src({
       src: [[${srcUrl}]],
       type: "application/x-mpegURL"
     });
+
+    player.play();
 
 /*]]>*/
 </script>
