--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -6,7 +6,7 @@
     <link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet">
 </head>
 <body>
-<video id="my-video" class="video-js" controls preload="auto" fluid="true"></video>
+<video class="video-js" controls fluid="true" id="my-video" preload="auto"></video>
 <script src="https://vjs.zencdn.net/7.5.4/video.js"></script>
 <script src="https://unpkg.com/videojs-contrib-hls/dist/videojs-contrib-hls.js"></script>
 <script th:inline="javascript">
@@ -21,6 +21,7 @@
     player.play();
 
 /*]]>*/
+
 </script>
 </body>
 </html>
